--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,23 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.quesCard {
+  width: 100%;
+  margin: 10% 0;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.answerWrap {
+  width: 48%;
+  padding: 1%;
+  margin: 1%;
+  border-radius: 25px;
 }
-
-.App-link {
-  color: #61dafb;
+.noPadding {
+  padding: 0%;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.spanOption {
+  float: left;
+  margin-left: 2rem;
+}
+.bg-green {
+  background-color: rgb(96, 219, 96);
 }
