--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,14 @@
 }
 .quesCard {
   width: 100%;
-  margin: 10% 0;
+  margin: 5% 0 10% 0;
 }
 .answerWrap {
   width: 48%;
   padding: 1%;
   margin: 1%;
   border-radius: 25px;
+  float: left;
 }
 .noPadding {
   padding: 0%;
@@ -23,4 +24,18 @@
 }
 .bg-red {
   background-color: rgb(245, 40, 40);
+}
+.navWrap {
+  clear: both;
+  justify-content: flex-end;
+}
+span.gamePoints {
+  justify-self: flex-end;
+  color: orange;
+  font-size: 2rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+.statistics {
+  justify-content: space-evenly;
 }
