Implented User Profile feature (which shows the total points and master level of the user) by making use of local storage. Removed unwanted files and comments from code

--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,8 @@ span.gamePoints {
 .setMargin {
   margin: 2%;
 }
+.btn-primary:disabled {
+  color: #fff;
+  background-color: #b7bdc3;
+  border-color: #007bff;
+}
